Navi/Fix/Wrap

--- a/app/components/Playlists/Playlist.module.scss
+++ b/app/components/Playlists/Playlist.module.scss
@@ -8,11 +8,19 @@
 }
 
 .container {
-    padding: 0 20px;
+    padding: 10px 20px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+@media screen and (max-width: 391px) {
+    .container {
+        justify-content: center;
+    }
 }
 
 .wrapper {
